--- a/templates/login.html
+++ b/templates/login.html
@@ -1,29 +1,30 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Secret Santa Login{% endblock %}
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='login.css')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='login.css')}}">
 {% endblock %}
 
+
 {% block body %}
+
 <div class="container">
 
-  <form class="form-signin">
-    <h2 class="form-signin-heading">Secret Santa Login</h2>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+<form class="form-signin" action="{{ url_for('login') }}" method="post">
+
+  <h2 class="form-signin-heading">Secret Santa Login</h2>
+  {{ form.hidden_tag() }}
+  {{ form.email.label(**{'class': 'sr-only'}) }}
+  {{ form.email(**{'class': 'form-control', 'placeholder': 'Email address', 'autofocus': True}) }}
+  {{ form.password.label(**{'class': 'sr-only'}) }}
+  {{ form.password(**{'class': 'form-control', 'placeholder': 'Password'}) }}
+  {{ form.submit(**{'class': 'btn btn-lg btn-primary btn-block'}) }}
+
+</form>
 
 </div>
+
 {% endblock %}
