--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,15 @@
 {% block body %}
 
 <div class="container">
+{% for message in get_flashed_messages() %}
+<div class="alert alert-warning">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{ message }}
+</div>
+{% endfor %}
+</div>
+
+<div class="container">
 
 <form class="form-signin" action="{{ url_for('login') }}" method="post">
 
