--- a/templates/login.html
+++ b/templates/login.html
@@ -12,13 +12,15 @@
 {% block body %}
 
 <div class="container">
+
 {% for message in get_flashed_messages() %}
-<div class="alert alert-warning">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    {{ message }}
+<div class="alert alert-warning" role="alert">
+  {{ message }}
 </div>
 {% endfor %}
+
 </div>
+
 
 <div class="container">
 
